# self-dialog-bot

./: .env.example  .gitignore  README.md  brainstorming.py  cli.py  happy.py  pyproject.toml  self_dialogue_core.py  streamlit_app.py  te.py  test.py  test_dialog.py
.github/workflows/: ci.yml
templates/: qa_basic.toml
tests/: test_core.py
