[build-system]
requires = ["setuptools==80.9.0"]
build-backend = "setuptools.build_meta"

[project]
name = "self-dialog-bot"
version = "0.1.0"
description = "Run a structured dialogue between two OpenAI roles"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "openai==1.93.0",
  "python-dotenv==1.1.1",
  "streamlit==1.46.1",
]

[project.optional-dependencies]
dev = [
  "pytest==8.4.1",
  "ruff==0.12.2",
]

[project.scripts]
self-dialog = "cli:main"

[tool.setuptools]
py-modules = ["cli", "self_dialogue_core", "streamlit_app"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
